Overflow fix

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -15,11 +15,6 @@ a {
   }
 }
 
-p a,
-li a {
-  word-break: break-all;
-}
-
 :focus {
   outline: 1px dotted;
   outline-offset: 4px;
